--- a/minishop/style.css
+++ b/minishop/style.css
@@ -1,22 +1,6 @@
 body {
     margin: 40px;
   }
- 
-  #shim {
-    opacity: .95;
-    filter: alpha(opacity=75);
-    -ms-filter: "alpha(opacity=75)";
-    -khtml-opacity: .75;
-    -moz-opacity: .75;
-    background: #444;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    
-    height: 100%;
-    width: 100%;
-    /* z-index:990  */
-    }
     
     
 .wrapper {
@@ -73,7 +57,33 @@ body {
     grid-row-end: 2;
 }
 
-.a:hover{
+.box:hover{
     background-color: red;
+}
+
+#TextRightTop, TextRightMiddle{
+    display: inline-block;        
+    width: 100%;       
+    margin: 0 auto 0;      
+    position: relative;        
+    text-align: left;  
+    box-sizing: border-box; 
+}
+
+#TextRightTopTitle, TextRightMiddleDesc{
+    display: inline-block;          
+    width: 100%;          
+    font-family: 'Montserrat', sans-serif;          
+    font-size: 16px;          
+    font-weight: bold; 
+    line-height: 1; 
+    color: #212121;  
+    text-align: center; 
+    box-sizing: border-box; 
+
+}
+
+#TextRightMiddleDesc{
+    padding: 10px;
 }
 
