updated bootstrap minishop

--- a/bootstrapMinishop/style.css
+++ b/bootstrapMinishop/style.css
@@ -15,7 +15,10 @@
 }  
 
 
-
+.d-block{
+    width: 250px;
+    height: 250px;
+} 
 
 #TextRightTop, TextRightMiddle{
     display: inline-block;        
