--- a/bootstrapMinishop/style.css
+++ b/bootstrapMinishop/style.css
@@ -83,6 +83,9 @@
     margin-left: 10px;
     padding: 10px 0px;
 }
+#total-price{
+    box-sizing: border-box;
+}
 .box2{
     padding: 10px 0px;
 }
